src/components/Projects/Projects.module.css
.projects__header {
    margin: var(--margin-24px);
    text-align: center;
}

.projects__container {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
}

.projects__container img {
    border-radius: var(--default-radius);
    max-width: 80%;
}

.projects__card {
    align-items: center;
    background-color: #f0f0f0;
    border-radius: var(--default-radius);
    box-shadow: inset 0 0 10px #e2e2e2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: var(--margin-24px);
    max-width: 600px;
    padding: 0.5rem 0;
}

.projects__card > * {
    margin: 1rem 0;
}

.projects__technologies {
    display: flex;
    font-size: 2rem;
    justify-content: space-evenly;
    margin-right: var(--margin-24px);
    width: 100%;
}

